style.css
:root {
    accent-color: purple;
}

body {
    color: white;
    font-family: 'Noto Sans', sans-serif;
}

.header-container {
    min-height: 10vh;
    background-color: rgb(63, 63, 63);
    position: relative;
}

header {
    max-width: 1000px;
    margin: 0 auto;
    position: relative;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}

header :first-child {
    flex: 2;
}

.logo {
    border: 2px solid white;
    padding: 8px;
    display: flex;
    align-items: center;
    cursor: pointer;
    transition: 0.4s border;
    max-width: 335px;
    box-sizing: border-box;
}

.logo:hover {
    border: 3px solid rgb(165, 19, 165);
}

.logo-title {
    font-weight: 700;
    font-size: 1.8rem;
    line-height: 2.4rem;
    font-family: 'Koulen', cursive;
    margin-right: 5px;
    transition: 1s color;
}

.logo-title::first-letter {
    color: rgb(165, 19, 165);
}

.logo-title:hover {
    color: rgb(165, 19, 165);
}

.logo-role {
    font-weight: 400;
    font-family: 'Noto Sans', sans-serif;
    color: rgb(172, 172, 172);
}

.container {
    max-width: 1000px;
    min-height: 80vh;
    background-color: rgb(63, 63, 63);
    margin: 0 auto;
    position: relative;
}

main {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
}

.box {
    width: 30%;
    min-height: 20px;
    box-sizing: border-box;
    background-color: purple;
    margin: 10px;
}

.box img {
    width: 100%;
}

.box p {
    padding: 10px 20px;
}

.box p::first-line {
    font-weight: 700;
}

h1 {
    font-size: 3rem;
    line-height: 3.5rem;
    font-family: 'Koulen', cursive;
    margin-bottom: 5px;
}

p {
    font-size: 1rem;
    line-height: 1rem;
    font-family: 'Noto Sans', sans-serif;
    margin-bottom: 5px;
}

nav li {
    display: inline-block;
}

.nav-btn {
    padding: 10px 15px;
    color: white;
    border: 1px solid white;
    background-color: transparent;
    cursor: pointer;
    transition: 1s color, 0.4s background-color;
}

.nav-btn:hover {
    color: rgb(63, 63, 63);
    background-color: white;
}

/* Responsive  Design */

.hide-desktop {
    display: none;
}

.hide-tablet {
    display: block;
}

.hide-mobile {
    display: block;
}

/* Tablet */

@media screen and (max-width: 768px) {
    .container {
        width: 100%;
    }
    .box {
        width: 45%;
    }
    .hide-desktop {
        display: block;
    }
    .hide-tablet {
        display: none;
    }
    .hide-mobile {
        display: block;
    }
}

/* Mobile */

@media screen and (max-width: 425px) {
    .box {
        width: 100%;
    }
    .hide-desktop {
        display: block;
    }
    .hide-tablet {
        display: block;
    }
    .hide-mobile {
        display: none;
    }
}

